add fade in page gallery

--- a/gallery.html
+++ b/gallery.html
@@ -201,7 +201,7 @@
         <div class="container-fluid p-0">
           <div class="row g-0 justify-content-center">
             <div class="col-lg-8">
-              <div class="desc">
+              <div class="desc data-fade-in">
                 At Vias Van Phong, every smile, every sunset, and every shared
                 laugh becomes a treasured memory. Whether it’s a family
                 vacation, a romantic escape, or a joyful gathering with friends,
@@ -219,7 +219,7 @@
         <div class="container-fluid p-0">
           <div class="gallery-sec-container">
             <ul
-              class="nav nav-pills justify-content-center"
+              class="nav nav-pills justify-content-center data-fade-in"
               id="pills-tab"
               role="tablist"
             >
@@ -350,7 +350,7 @@
                 </button>
               </li>
             </ul>
-            <div class="tab-content" id="pills-tabContent">
+            <div class="tab-content data-fade-in" id="pills-tabContent">
               <div
                 class="tab-pane fade show active"
                 id="gallery-content-1"
