--- a/accommdation-detail.html
+++ b/accommdation-detail.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Accommodation Detail</title>
     <!-- import favicon -->
-    <link rel="icon" type="image/x-icon" />
+    <link
+      rel="icon"
+      href="./assets/images/use/favicon-dark.ico"
+      type="image/x-icon"
+      media="(prefers-color-scheme: light)"
+    />
+    <link
+      rel="icon"
+      href="./assets/images/use/favicon-light.ico"
+      type="image/x-icon"
+      media="(prefers-color-scheme: dark"
+    />
     <!-- meta -->
     <meta property="og:url" content="" />
     <meta property="og:type" content="website" />
