--- a/service-detail.html
+++ b/service-detail.html
@@ -15,7 +15,7 @@
       rel="icon"
       href="./assets/images/use/favicon-light.ico"
       type="image/x-icon"
-      media="(prefers-color-scheme: dark"
+      media="(prefers-color-scheme: dark)"
     />
     <!-- meta -->
     <meta property="og:url" content="" />
