--- a/gallery.html
+++ b/gallery.html
@@ -229,138 +229,286 @@
       <section class="gallery-sec">
         <div class="container-fluid p-0">
           <div class="gallery-sec-container">
-            <ul
-              class="nav nav-pills justify-content-center data-fade-in"
-              id="pills-tab"
-              role="tablist"
-            >
-              <li class="nav-item" role="presentation">
-                <button
-                  class="nav-link active"
-                  id="gallery-1"
-                  data-bs-toggle="pill"
-                  data-bs-target="#gallery-content-1"
-                  type="button"
-                  role="tab"
-                  aria-controls="gallery-content-1"
-                  aria-selected="true"
-                >
-                  <div
-                    class="title b2s-font color-secondary text-uppercase link-hover"
+            <div class="filter-desktop d-none d-lg-block">
+              <ul
+                class="nav nav-pills justify-content-center data-fade-in"
+                id="pills-tab"
+                role="tablist"
+              >
+                <li class="nav-item" role="presentation">
+                  <button
+                    class="nav-link active"
+                    id="gallery-1"
+                    data-bs-toggle="pill"
+                    data-bs-target="#gallery-content-1"
+                    type="button"
+                    role="tab"
+                    aria-controls="gallery-content-1"
+                    aria-selected="true"
                   >
-                    all
-                  </div>
-                </button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button
-                  class="nav-link"
-                  id="gallery-2"
-                  data-bs-toggle="pill"
-                  data-bs-target="#gallery-content-2"
-                  type="button"
-                  role="tab"
-                  aria-controls="gallery-content-2"
-                  aria-selected="false"
-                >
-                  <div
-                    class="title b2s-font color-secondary text-uppercase link-hover"
+                    <div
+                      class="title b2s-font color-secondary text-uppercase link-hover"
+                    >
+                      all
+                    </div>
+                  </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button
+                    class="nav-link"
+                    id="gallery-2"
+                    data-bs-toggle="pill"
+                    data-bs-target="#gallery-content-2"
+                    type="button"
+                    role="tab"
+                    aria-controls="gallery-content-2"
+                    aria-selected="false"
                   >
-                    building & suites
-                  </div>
-                </button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button
-                  class="nav-link"
-                  id="gallery-3"
-                  data-bs-toggle="pill"
-                  data-bs-target="#gallery-content-3"
-                  type="button"
-                  role="tab"
-                  aria-controls="gallery-content-3"
-                  aria-selected="false"
-                >
-                  <div
-                    class="title b2s-font color-secondary text-uppercase link-hover"
+                    <div
+                      class="title b2s-font color-secondary text-uppercase link-hover"
+                    >
+                      building & suites
+                    </div>
+                  </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button
+                    class="nav-link"
+                    id="gallery-3"
+                    data-bs-toggle="pill"
+                    data-bs-target="#gallery-content-3"
+                    type="button"
+                    role="tab"
+                    aria-controls="gallery-content-3"
+                    aria-selected="false"
                   >
-                    dinning
-                  </div>
-                </button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button
-                  class="nav-link"
-                  id="gallery-4"
-                  data-bs-toggle="pill"
-                  data-bs-target="#gallery-content-4"
-                  type="button"
-                  role="tab"
-                  aria-controls="gallery-content-4"
-                  aria-selected="false"
-                >
-                  <div
-                    class="title b2s-font color-secondary text-uppercase link-hover"
+                    <div
+                      class="title b2s-font color-secondary text-uppercase link-hover"
+                    >
+                      dinning
+                    </div>
+                  </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button
+                    class="nav-link"
+                    id="gallery-4"
+                    data-bs-toggle="pill"
+                    data-bs-target="#gallery-content-4"
+                    type="button"
+                    role="tab"
+                    aria-controls="gallery-content-4"
+                    aria-selected="false"
                   >
-                    offers
-                  </div>
-                </button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button
-                  class="nav-link"
-                  id="gallery-5"
-                  data-bs-toggle="pill"
-                  data-bs-target="#gallery-content-5"
-                  type="button"
-                  role="tab"
-                  aria-controls="gallery-content-5"
-                  aria-selected="false"
-                >
-                  <div
-                    class="title b2s-font color-secondary text-uppercase link-hover"
+                    <div
+                      class="title b2s-font color-secondary text-uppercase link-hover"
+                    >
+                      offers
+                    </div>
+                  </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button
+                    class="nav-link"
+                    id="gallery-5"
+                    data-bs-toggle="pill"
+                    data-bs-target="#gallery-content-5"
+                    type="button"
+                    role="tab"
+                    aria-controls="gallery-content-5"
+                    aria-selected="false"
                   >
-                    facilities
-                  </div>
-                </button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button
-                  class="nav-link"
-                  id="gallery-6"
-                  data-bs-toggle="pill"
-                  data-bs-target="#gallery-content-6"
-                  type="button"
-                  role="tab"
-                  aria-controls="gallery-content-6"
-                  aria-selected="false"
-                >
-                  <div
-                    class="title b2s-font color-secondary text-uppercase link-hover"
+                    <div
+                      class="title b2s-font color-secondary text-uppercase link-hover"
+                    >
+                      facilities
+                    </div>
+                  </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button
+                    class="nav-link"
+                    id="gallery-6"
+                    data-bs-toggle="pill"
+                    data-bs-target="#gallery-content-6"
+                    type="button"
+                    role="tab"
+                    aria-controls="gallery-content-6"
+                    aria-selected="false"
                   >
-                    Services
-                  </div>
-                </button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button
-                  class="nav-link"
-                  id="gallery-7"
-                  data-bs-toggle="pill"
-                  data-bs-target="#gallery-content-7"
-                  type="button"
-                  role="tab"
-                  aria-controls="gallery-content-7"
-                  aria-selected="false"
-                >
-                  <div
-                    class="title b2s-font color-secondary text-uppercase link-hover"
+                    <div
+                      class="title b2s-font color-secondary text-uppercase link-hover"
+                    >
+                      Services
+                    </div>
+                  </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button
+                    class="nav-link"
+                    id="gallery-7"
+                    data-bs-toggle="pill"
+                    data-bs-target="#gallery-content-7"
+                    type="button"
+                    role="tab"
+                    aria-controls="gallery-content-7"
+                    aria-selected="false"
                   >
-                    Meeting & event
-                  </div>
-                </button>
-              </li>
-            </ul>
+                    <div
+                      class="title b2s-font color-secondary text-uppercase link-hover"
+                    >
+                      Meeting & event
+                    </div>
+                  </button>
+                </li>
+              </ul>
+            </div>
+            <div class="fitler-mobile d-block d-lg-none">
+              <div class="filter-head">
+                <div
+                  class="filter-value-select b2s-font color-secondary text-uppercase"
+                >
+                  All
+                </div>
+                <div class="ic-arrow">
+                  <img src="./assets/images/use/ic-arrow-mobile.svg" alt="" />
+                </div>
+              </div>
+              <div class="filter-body">
+                <ul
+                  class="nav nav-pills justify-content-center data-fade-in"
+                  id="pills-tab"
+                  role="tablist"
+                >
+                  <li class="nav-item" role="presentation">
+                    <button
+                      class="nav-link active"
+                      id="gallery-1"
+                      data-bs-toggle="pill"
+                      data-bs-target="#gallery-content-1"
+                      type="button"
+                      role="tab"
+                      aria-controls="gallery-content-1"
+                      aria-selected="true"
+                    >
+                      <div
+                        class="title b2s-font color-secondary text-uppercase link-hover"
+                      >
+                        all
+                      </div>
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button
+                      class="nav-link"
+                      id="gallery-2"
+                      data-bs-toggle="pill"
+                      data-bs-target="#gallery-content-2"
+                      type="button"
+                      role="tab"
+                      aria-controls="gallery-content-2"
+                      aria-selected="false"
+                    >
+                      <div
+                        class="title b2s-font color-secondary text-uppercase link-hover"
+                      >
+                        building & suites
+                      </div>
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button
+                      class="nav-link"
+                      id="gallery-3"
+                      data-bs-toggle="pill"
+                      data-bs-target="#gallery-content-3"
+                      type="button"
+                      role="tab"
+                      aria-controls="gallery-content-3"
+                      aria-selected="false"
+                    >
+                      <div
+                        class="title b2s-font color-secondary text-uppercase link-hover"
+                      >
+                        dinning
+                      </div>
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button
+                      class="nav-link"
+                      id="gallery-4"
+                      data-bs-toggle="pill"
+                      data-bs-target="#gallery-content-4"
+                      type="button"
+                      role="tab"
+                      aria-controls="gallery-content-4"
+                      aria-selected="false"
+                    >
+                      <div
+                        class="title b2s-font color-secondary text-uppercase link-hover"
+                      >
+                        offers
+                      </div>
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button
+                      class="nav-link"
+                      id="gallery-5"
+                      data-bs-toggle="pill"
+                      data-bs-target="#gallery-content-5"
+                      type="button"
+                      role="tab"
+                      aria-controls="gallery-content-5"
+                      aria-selected="false"
+                    >
+                      <div
+                        class="title b2s-font color-secondary text-uppercase link-hover"
+                      >
+                        facilities
+                      </div>
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button
+                      class="nav-link"
+                      id="gallery-6"
+                      data-bs-toggle="pill"
+                      data-bs-target="#gallery-content-6"
+                      type="button"
+                      role="tab"
+                      aria-controls="gallery-content-6"
+                      aria-selected="false"
+                    >
+                      <div
+                        class="title b2s-font color-secondary text-uppercase link-hover"
+                      >
+                        Services
+                      </div>
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button
+                      class="nav-link"
+                      id="gallery-7"
+                      data-bs-toggle="pill"
+                      data-bs-target="#gallery-content-7"
+                      type="button"
+                      role="tab"
+                      aria-controls="gallery-content-7"
+                      aria-selected="false"
+                    >
+                      <div
+                        class="title b2s-font color-secondary text-uppercase link-hover"
+                      >
+                        Meeting & event
+                      </div>
+                    </button>
+                  </li>
+                </ul>
+              </div>
+            </div>
             <div class="tab-content data-fade-in" id="pills-tabContent">
               <div
                 class="tab-pane fade show active"
