--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
   </head>
   <body>
     <!-- layout -->
+    <div class="loading">
+      <div class="logo">
+        <img src="./assets/images/use/logo-loading.svg" alt="" />
+      </div>
+      <div class="image">
+        <img src="./assets/images/use/image-loading.webp" alt="" />
+      </div>
+    </div>
     <header class="header">
       <div class="container-fluid p-0">
         <div class="header-wrapper">
