--- a/contact.html
+++ b/contact.html
@@ -249,11 +249,11 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="heading-faq-1">
                         <button
-                          class="accordion-button h6-font color-secondary font-heading"
+                          class="accordion-button h6-font color-secondary font-heading collapsed"
                           type="button"
                           data-bs-toggle="collapse"
                           data-bs-target="#collapse-faq-1"
-                          aria-expanded="true"
+                          aria-expanded="false"
                           aria-controls="collapse-faq-1"
                         >
                           How do you get to Vias Resort Van Phong Peninsula?
@@ -261,7 +261,7 @@
                       </h2>
                       <div
                         id="collapse-faq-1"
-                        class="accordion-collapse collapse show"
+                        class="accordion-collapse collapse"
                         aria-labelledby="heading-faq-1"
                         data-bs-parent="#accordionFAQ"
                       >
@@ -529,12 +529,14 @@
               <div class="footer-info">
                 <p class="text-center">Van Phong Bay, Nha Trang, Khanh Hoa</p>
                 <div class="footer-contact">
-                  <a href="#" class="link-hover"
-                    >Email: sale@vanphongresort.vn</a
-                  >
-                  <a href="#" class="link-hover"
-                    >Telephone: (+84) 2583 939 888</a
-                  >
+                  <p class="contact-email">
+                    Email:
+                    <a href="#" class="link-hover"> sale@vanphongresort.vn</a>
+                  </p>
+                  <p class="contact-tel">
+                    Telephone:
+                    <a href="#" class="link-hover"> (+84) 2583 939 888</a>
+                  </p>
                 </div>
               </div>
               <div class="footer-download">
@@ -679,7 +681,10 @@
                   </li>
                 </ul>
               </div>
-              <a href="#" class="footer-alpha link-hover">
+              <a
+                href="https://alphacreative.vn/"
+                class="footer-alpha link-hover"
+              >
                 Digital experience by Alphacreative
               </a>
             </div>
@@ -942,7 +947,10 @@
                   </li>
                 </ul>
               </div>
-              <a href="#" class="footer-alpha link-hover">
+              <a
+                href="https://alphacreative.vn/"
+                class="footer-alpha link-hover"
+              >
                 Digital experience by Alphacreative
               </a>
             </div>
