--- a/accommdation-detail.html
+++ b/accommdation-detail.html
@@ -782,12 +782,14 @@
               <div class="footer-info">
                 <p class="text-center">Van Phong Bay, Nha Trang, Khanh Hoa</p>
                 <div class="footer-contact">
-                  <a href="#" class="link-hover"
-                    >Email: sale@vanphongresort.vn</a
-                  >
-                  <a href="#" class="link-hover"
-                    >Telephone: (+84) 2583 939 888</a
-                  >
+                  <p class="contact-email">
+                    Email:
+                    <a href="#" class="link-hover"> sale@vanphongresort.vn</a>
+                  </p>
+                  <p class="contact-tel">
+                    Telephone:
+                    <a href="#" class="link-hover"> (+84) 2583 939 888</a>
+                  </p>
                 </div>
               </div>
               <div class="footer-download">
