--- a/accommdation-detail.html
+++ b/accommdation-detail.html
@@ -934,7 +934,10 @@
                   </li>
                 </ul>
               </div>
-              <a href="#" class="footer-alpha link-hover">
+              <a
+                href="https://alphacreative.vn/"
+                class="footer-alpha link-hover"
+              >
                 Digital experience by Alphacreative
               </a>
             </div>
@@ -1197,7 +1200,10 @@
                   </li>
                 </ul>
               </div>
-              <a href="#" class="footer-alpha link-hover">
+              <a
+                href="https://alphacreative.vn/"
+                class="footer-alpha link-hover"
+              >
                 Digital experience by Alphacreative
               </a>
             </div>
