--- a/gallery.html
+++ b/gallery.html
@@ -89,7 +89,14 @@
         </div>
         <div class="header-scroll">
           <div class="header-scroll-wrapper">
-            <div class="col-empty"></div>
+            <div class="col-empty">
+              <div class="header-hamburger d-flex d-lg-none">
+                <div class="hamburger">
+                  <span></span>
+                  <span></span>
+                </div>
+              </div>
+            </div>
             <div class="col-main">
               <div class="col-menu left">
                 <ul>
@@ -194,6 +201,72 @@
                     <span class="b2-font text-uppercase">VI</span>
                   </a>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="header-sub-menu">
+          <div class="header-sub-menu-container">
+            <div class="sub-menu-container">
+              <div class="sub-menu">
+                <ul>
+                  <li>
+                    <a
+                      href="./accommodation.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Building & suites</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./accommodation.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Dining</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./facility.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Facilities</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./offer.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Offers</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./service.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Services</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./event.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Meeting & event</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./gallery.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Gallery</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./contact.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Contact</a
+                    >
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
