--- a/index.html
+++ b/index.html
@@ -93,7 +93,14 @@
         </div>
         <div class="header-scroll">
           <div class="header-scroll-wrapper">
-            <div class="col-empty"></div>
+            <div class="col-empty">
+              <div class="header-hamburger d-flex d-lg-none">
+                <div class="hamburger">
+                  <span></span>
+                  <span></span>
+                </div>
+              </div>
+            </div>
             <div class="col-main">
               <div class="col-menu left">
                 <ul>
