--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                   </li>
                   <li>
                     <a
-                      href="./dining.html"
-                      class="b2-font color-white text-uppercase link-hover"
+                      href="./restaurant.html"
+                      class="b2-font color-white text-uppercase link-hover active"
                       >Dining</a
                     >
                   </li>
@@ -142,14 +142,14 @@
                   <li>
                     <a
                       href="./service.html"
-                      class="b2-font color-white text-uppercase link-hover"
+                      class="b2-font color-white text-uppercase link-hover active"
                       >Services</a
                     >
                   </li>
                   <li>
                     <a
                       href="./event.html"
-                      class="b2-font color-white text-uppercase link-hover"
+                      class="b2-font color-white text-uppercase link-hover active"
                       >Meeting & event</a
                     >
                   </li>
@@ -205,6 +205,72 @@
                     <span class="b2-font text-uppercase">VI</span>
                   </a>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="header-sub-menu">
+          <div class="header-sub-menu-container">
+            <div class="sub-menu-container">
+              <div class="sub-menu">
+                <ul>
+                  <li>
+                    <a
+                      href="./accommodation.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Building & suites</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./accommodation.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Dining</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./facility.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Facilities</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./offer.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Offers</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./service.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Services</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./event.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Meeting & event</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./gallery.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Gallery</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./contact.html"
+                      class="font-heading h5-font color-white font-italic font-light"
+                      >Contact</a
+                    >
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
