add mobile header all page

--- a/offer.html
+++ b/offer.html
@@ -85,7 +85,14 @@
         </div>
         <div class="header-scroll">
           <div class="header-scroll-wrapper">
-            <div class="col-empty"></div>
+            <div class="col-empty">
+              <div class="header-hamburger d-flex d-lg-none">
+                <div class="hamburger">
+                  <span></span>
+                  <span></span>
+                </div>
+              </div>
+            </div>
             <div class="col-main">
               <div class="col-menu left">
                 <ul>
@@ -98,15 +105,15 @@
                   </li>
                   <li>
                     <a
-                      href="./dining.html"
-                      class="b2-font color-white text-uppercase link-hover"
+                      href="./restaurant.html"
+                      class="b2-font color-white text-uppercase link-hover active"
                       >Dining</a
                     >
                   </li>
                   <li>
                     <a
                       href="./offer.html"
-                      class="b2-font color-white text-uppercase link-hover active"
+                      class="b2-font color-white text-uppercase link-hover"
                       >Offers</a
                     >
                   </li>
@@ -127,14 +134,14 @@
                   <li>
                     <a
                       href="./service.html"
-                      class="b2-font color-white text-uppercase link-hover"
+                      class="b2-font color-white text-uppercase link-hover active"
                       >Services</a
                     >
                   </li>
                   <li>
                     <a
                       href="./event.html"
-                      class="b2-font color-white text-uppercase link-hover"
+                      class="b2-font color-white text-uppercase link-hover active"
                       >Meeting & event</a
                     >
                   </li>
@@ -156,8 +163,13 @@
               </div>
             </div>
             <div class="col-lang">
-              <div class="header-language dropdown-custom d-none">
+              <div class="header-language dropdown-custom">
                 <div class="language__head dropdown-custom__btn">
+                  <div
+                    class="value-select color-white dropdown-custom__text b2-font text-uppercase"
+                  >
+                    <span>En</span>
+                  </div>
                   <div class="ic">
                     <svg
                       width="13"
@@ -176,20 +188,81 @@
                       />
                     </svg>
                   </div>
-                  <div
-                    class="value-select color-white dropdown-custom__text b2-font text-uppercase"
-                  >
-                    <span>En</span>
-                  </div>
                 </div>
                 <div class="language__body dropdown-custom__menu">
                   <a
                     href="#"
                     class="dropdown-custom__item language__item b2-font text-uppercase"
                   >
-                    <span>VI</span>
+                    <span class="b2-font text-uppercase">VI</span>
                   </a>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="header-sub-menu">
+          <div class="header-sub-menu-container">
+            <div class="sub-menu-container">
+              <div class="sub-menu">
+                <ul>
+                  <li>
+                    <a
+                      href="./accommodation.html"
+                      class="font-heading h5-font color-white font-italic font-light link-hover"
+                      >Building & suites</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./accommodation.html"
+                      class="font-heading h5-font color-white font-italic font-light link-hover"
+                      >Dining</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./facility.html"
+                      class="font-heading h5-font color-white font-italic font-light link-hover"
+                      >Facilities</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./offer.html"
+                      class="font-heading h5-font color-white font-italic font-light link-hover"
+                      >Offers</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./service.html"
+                      class="font-heading h5-font color-white font-italic font-light link-hover"
+                      >Services</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./event.html"
+                      class="font-heading h5-font color-white font-italic font-light link-hover"
+                      >Meeting & event</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./gallery.html"
+                      class="font-heading h5-font color-white font-italic font-light link-hover"
+                      >Gallery</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./contact.html"
+                      class="font-heading h5-font color-white font-italic font-light link-hover"
+                      >Contact</a
+                    >
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
