--- a/accommodation-detail.html
+++ b/accommodation-detail.html
@@ -541,6 +541,7 @@
                 </svg>
               </div>
             </div>
+            <div class="slider-parallax-pagination d-block d-lg-none"></div>
           </div>
         </div>
       </section>
