--- a/contact.html
+++ b/contact.html
@@ -205,7 +205,7 @@
                 </li>
                 <li>
                   <a
-                    href="./accommodation.html"
+                    href="./dining.html"
                     class="font-heading h5-font color-white font-italic font-light link-hover"
                     >Dining</a
                   >
