--- a/service-detail.html
+++ b/service-detail.html
@@ -311,14 +311,14 @@
         </div>
       </section>
 
-      <section class="slider-parallax">
+      <section class="slider-parallax spacing-top-mobile">
         <div class="container-fluid p-0 h-100">
           <div class="slider-parallax-container h-100">
             <div class="swiper swiper-parallax-img">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="slider-parallax-img">
-                    <img src="./assets/images/img-res.png" alt="" />
+                    <img src="./assets/images/img-fac.png" alt="" />
                   </div>
                 </div>
                 <div class="swiper-slide">
@@ -328,7 +328,7 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="slider-parallax-img">
-                    <img src="./assets/images/img-res.png" alt="" />
+                    <img src="./assets/images/img-fac.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -371,6 +371,7 @@
                 </svg>
               </div>
             </div>
+            <div class="slider-parallax-pagination d-block d-lg-none"></div>
           </div>
         </div>
       </section>
