--- a/dining-detail.html
+++ b/dining-detail.html
@@ -310,7 +310,7 @@
         </div>
       </section>
 
-      <section class="slider-parallax">
+      <section class="slider-parallax spacing-top-mobile">
         <div class="container-fluid p-0 h-100">
           <div class="slider-parallax-container h-100">
             <div class="swiper swiper-parallax-img">
@@ -370,6 +370,7 @@
                 </svg>
               </div>
             </div>
+            <div class="slider-parallax-pagination d-block d-lg-none"></div>
           </div>
         </div>
       </section>
