--- a/facility-detail.html
+++ b/facility-detail.html
@@ -306,7 +306,7 @@
         </div>
       </section>
 
-      <section class="slider-parallax">
+      <section class="slider-parallax spacing-top-mobile">
         <div class="container-fluid p-0 h-100">
           <div class="slider-parallax-container h-100">
             <div class="swiper swiper-parallax-img">
@@ -366,6 +366,7 @@
                 </svg>
               </div>
             </div>
+            <div class="slider-parallax-pagination d-block d-lg-none"></div>
           </div>
         </div>
       </section>
