--- a/offer-detail.html
+++ b/offer-detail.html
@@ -291,7 +291,7 @@
                   Elevated experiences for prestigious events & high level
                   corporate meeting
                 </div>
-                <div class="description-multiline">
+                <div class="description-multiline data-fade-in">
                   <p>
                     Only 4,890,000 VND/2 Guests – 3 days 2 nights package at
                     5-star VIAS Vung Tau hotel including:
