edit variable bg page contact

--- a/contact.html
+++ b/contact.html
@@ -261,7 +261,7 @@
     <main>
       <section
         class="section-contact"
-        style="--bg-contact: url('/assets/images/banner-contact.png')"
+        style="--bg-contact: url('../../images/banner-contact.png')"
       >
         <div class="container-fluid p-0">
           <div class="row g-0 justify-content-center">
