add text succes when submit form

--- a/contact.html
+++ b/contact.html
@@ -294,6 +294,9 @@
                     <div class="field">
                       <textarea name="message" placeholder="Message"></textarea>
                     </div>
+                    <div class="noti-success b1-font color-secondary d-none">
+                      Success!
+                    </div>
                     <button class="btn-general">SEND</button>
                   </form>
                 </div>
