--- a/gallery.html
+++ b/gallery.html
@@ -594,7 +594,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-1.png"
-                      data-sub-html="<h4>Room</h4"
+                      data-sub-html="<h4>Room</h4>"
                     >
                       <img src="./assets/images/gallery-1.png" alt="" />
                     </div>
@@ -603,7 +603,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-2.png"
-                      data-sub-html="<h4>Dinning</h4"
+                      data-sub-html="<h4>Dinning</h4>"
                     >
                       <img src="./assets/images/gallery-2.png" alt="" />
                     </div>
@@ -612,7 +612,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-3.png"
-                      data-sub-html="<h4>Offers</h4"
+                      data-sub-html="<h4>Offers</h4>"
                     >
                       <img src="./assets/images/gallery-3.png" alt="" />
                     </div>
@@ -621,7 +621,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-4.png"
-                      data-sub-html="<h4>Faclitiy</h4"
+                      data-sub-html="<h4>Faclitiy</h4>"
                     >
                       <img src="./assets/images/gallery-4.png" alt="" />
                     </div>
@@ -630,7 +630,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-5.png"
-                      data-sub-html="<h4>Faclitiy</h4"
+                      data-sub-html="<h4>Faclitiy</h4>"
                     >
                       <img src="./assets/images/gallery-5.png" alt="" />
                     </div>
@@ -639,7 +639,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-2.png"
-                      data-sub-html="<h4>Dinning</h4"
+                      data-sub-html="<h4>Dinning</h4>"
                     >
                       <img src="./assets/images/gallery-2.png" alt="" />
                     </div>
@@ -648,7 +648,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-3.png"
-                      data-sub-html="<h4>Offers</h4"
+                      data-sub-html="<h4>Offers</h4>"
                     >
                       <img src="./assets/images/gallery-3.png" alt="" />
                     </div>
@@ -657,7 +657,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-4.png"
-                      data-sub-html="<h4>Faclitiy</h4"
+                      data-sub-html="<h4>Faclitiy</h4>"
                     >
                       <img src="./assets/images/gallery-4.png" alt="" />
                     </div>
@@ -666,7 +666,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-5.png"
-                      data-sub-html="<h4>Faclitiy</h4"
+                      data-sub-html="<h4>Faclitiy</h4>"
                     >
                       <img src="./assets/images/gallery-5.png" alt="" />
                     </div>
@@ -684,7 +684,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-1.png"
-                      data-sub-html="<h4>Room</h4"
+                      data-sub-html="<h4>Room</h4>"
                     >
                       <img src="./assets/images/gallery-1.png" alt="" />
                     </div>
@@ -693,7 +693,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-2.png"
-                      data-sub-html="<h4>Dinning</h4"
+                      data-sub-html="<h4>Dinning</h4>"
                     >
                       <img src="./assets/images/gallery-2.png" alt="" />
                     </div>
@@ -702,7 +702,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-3.png"
-                      data-sub-html="<h4>Offers</h4"
+                      data-sub-html="<h4>Offers</h4>"
                     >
                       <img src="./assets/images/gallery-3.png" alt="" />
                     </div>
@@ -711,7 +711,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-4.png"
-                      data-sub-html="<h4>Faclitiy</h4"
+                      data-sub-html="<h4>Faclitiy</h4>"
                     >
                       <img src="./assets/images/gallery-4.png" alt="" />
                     </div>
@@ -720,7 +720,7 @@
                     <div
                       class="gallery-sec-img thumb-img"
                       data-src="./assets/images/gallery-5.png"
-                      data-sub-html="<h4>Faclitiy</h4"
+                      data-sub-html="<h4>Faclitiy</h4>"
                     >
                       <img src="./assets/images/gallery-5.png" alt="" />
                     </div>
