--- a/index.html
+++ b/index.html
@@ -968,9 +968,9 @@
               </li>
             </ul>
             <div
-              class="swiper-pagination d-flex justify-content-between d-md-none"
+              class="swiper-pagination d-flex justify-content-between d-lg-none"
             ></div>
-            <div class="discover-arrow d-none d-md-block">
+            <div class="discover-arrow d-none d-lg-flex">
               <div class="swiper-button-next">
                 <svg
                   width="8"
@@ -1292,8 +1292,8 @@
                 </div>
               </li>
             </ul>
-            <div class="swiper-pagination d-block d-md-none"></div>
-            <div class="testimonials-arrow d-none d-md-block">
+            <div class="swiper-pagination d-block d-lg-none"></div>
+            <div class="testimonials-arrow d-none d-lg-flex">
               <div class="swiper-button-prev">
                 <svg
                   width="8"
