--- a/contact.html
+++ b/contact.html
@@ -539,7 +539,7 @@
                 <h4 class="title-social text-uppercase b3-font color-white">
                   Sign up to our newsletter
                 </h4>
-                <form action="">
+                <form action="" class="contact-form" id="contact-form">
                   <input type="email" placeholder="Email" />
                   <button type="submit">
                     <svg
