--- a/gallery.html
+++ b/gallery.html
@@ -77,12 +77,12 @@
                 </svg>
               </div>
               <div class="value-select color-white dropdown-custom__text">
-                <span>English</span>
+                <span>EN</span>
               </div>
             </div>
             <div class="language__body dropdown-custom__menu">
               <a href="#" class="dropdown-custom__item language__item">
-                <span>Tiếng Việt</span>
+                <span class="d-inline-block link-hover">VI</span>
               </a>
             </div>
           </div>
