--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="language__body dropdown-custom__menu">
               <a href="#" class="dropdown-custom__item language__item">
-                <span>Tiếng Việt</span>
+                <span class="d-inline-block link-hover">Tiếng Việt</span>
               </a>
             </div>
           </div>
